# indexa

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: error.rs  lib.rs  main.rs
src/edit/: mod.rs  new_item.rs
src/index/: mod.rs  preset.rs
src/index/dict/: mod.rs
src/index/dict/default/: editor.rs  mod.rs
src/index/dict/ngram/: editor.rs  mod.rs  ngram.rs
src/index/dict/simple/: editor.rs  mod.rs
src/index/dict/sorted/: editor.rs  item.rs  mod.rs
src/index/posting/: mod.rs
src/index/posting/compressed/: editor.rs  mod.rs
src/index/posting/default/: editor.rs  mod.rs
src/index/storage/: mod.rs
src/index/storage/default/: editor.rs  mod.rs
src/index/storage/passthrough/: editor.rs  mod.rs
src/index/traits/: editable_index.rs  helper.rs  index.rs  mod.rs
src/retrieve/: build.rs  mod.rs  options.rs
src/retrieve/retriever/: all_terms.rs  default.rs  mod.rs  sorted.rs
src/traits/: deser.rs
src/utils/: mod.rs
