[package]
name = "indexa"
version = "0.1.0"
edition = "2021"

[dependencies]
bytestore = { path = "../bytestore" }
bitcode = { version = "0.5", features = ["derive"] }
bincode = { version = "1.3" }
serde = { version = "1", features = ["derive"] }
varint-simd = { git = "https://github.com/as-com/varint-simd" }
fnv = "1"
highway = "*"

[dev-dependencies]
rand = "0.8"
criterion = "0.5.1"
serde_json = "*"
pretty_assertions = "1"
itertools = "0.12"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = 0
overflow-checks = true
#lto = "fat"
